# llm-playground

./: .gitignore  Dockerfile  README.md  dimensions.py  dimensions_short.txt  pyproject.toml
.github/workflows/: docker.yaml
app/: lib.py  main.py
app/static/: styles.css
app/templates/: index.html
playground/: full_pipeline.ipynb  lib.py  playground.ipynb  structure_query_result.ttl
